--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "pug": "^3.0.0",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "serve-favicon": "^2.5.0"
   },
   "engines": {
     "node": "12.x"
